package com.sysc4806.mini_shopify;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class  MiniShopifyApplication {

	public static void main(String[] args) {
		SpringApplication.run(MiniShopifyApplication.class, args);
	}

}
