@startuml

skinparam classAttributeIconSize 0
skinparam classFontSize 14
skinparam classFontStyle Bold
skinparam ArrowColor #2E8B57

class Store {
    - Long id
    - String name
    - String owner
    - String description
    - String category
    - List<Product> products
    - List<String> tags
    --
    + getId(): Long
    + getName(): String
    + getOwner(): String
    + getDescription(): String
    + getCategory(): String
    + getProducts(): List<Product>
    + getTags(): List<String>
    + addProduct(Product)
    + addTag(String)
}

class Product {
    - Long id
    - String name
    - String description
    - Double price
    - int quantity
    - Store store
    --
    + getId(): Long
    + getName(): String
    + getDescription(): String
    + getPrice(): Double
    + getQuantity(): int
    + getStore(): Store
}

class Customer {
    - Long id
    - String firstName
    - String lastName
    - String email
    - String phoneNumber
    --
    + getId(): Long
    + getFirstName(): String
    + getLastName(): String
    + getEmail(): String
    + getPhoneNumber(): String
}

class Order {
    - Long id
    - String shippingAddress
    - String shippingMethod
    - String billingAddress
    - String paymentMethod
    --
    + getId(): Long
    + getShippingAddress(): String
    + getShippingMethod(): String
    + getBillingAddress(): String
    + getPaymentMethod(): String
}

Store "1" --> "many" Product : owns
Product "many" --> "1" Store : belongs to
Customer "1" --> "many" Order : places
Order "1" --> "1" Customer : placed by

class StoreRepository <<interface>>
class ProductRepository <<interface>>
class CustomerRepository <<interface>>
class OrderRepository <<interface>>

StoreRepository --> Store
ProductRepository --> Product
CustomerRepository --> Customer
OrderRepository --> Order

class StoreController {
    + viewStores(Model)
    + createStore(Store, Model)
    + getStore(Long, Model)
}
class ProductController {
    + index(Model)
    + createProduct(Product)
    + findById(Long)
}
class CustomerController {
    + index(Model)
    + createCustomer(Customer)
    + getCustomer(Long)
}
class OrderController {
    + getAllOrders()
    + createOrder(Order)
    + getOrder(Long)
}

StoreController --> StoreRepository
ProductController --> ProductRepository
CustomerController --> CustomerRepository
OrderController --> OrderRepository

class MiniShopifyApplication {
    + main(String[])
}

MiniShopifyApplication --> StoreController
MiniShopifyApplication --> ProductController
MiniShopifyApplication --> CustomerController
MiniShopifyApplication --> OrderController

@enduml
